--- a/bestsite/otdels/templates/otdels/base.html
+++ b/bestsite/otdels/templates/otdels/base.html
@@ -11,8 +11,9 @@
 
     <body>
         <div class="page-header">
-            <a href="/new" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <h1><a href="/">Список рабов</a></h1>
+            <a href="{% url 'otdels:new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <h1><a href="/workers/">Список рабов</a></h1>
+            <h1><a href="/otdels/">Список отделов</a></h1>
         </div>
         <div class="content container">
             <div class="row">
