--- a/bestsite/workers/templates/workers/index.html
+++ b/bestsite/workers/templates/workers/index.html
@@ -1,10 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'workers/base.html' %}
 
 {% block content %}
         <!--<h1>{{title}}</h1>-->
         {% for i in workers %}
            <p>
-               <a href="/detail/{{i.id}}">{{i.name}} {{ i.fname}}</a>
+               <a href="{% url 'detail' id=i.id %}">{{i.name}} {{ i.fname}}</a>
+               <!--{{i.name}} {{ i.fname}}-->
                 <!--<a href="/update/{{i.id}}">Изменить</a>-->
            </p>
 
