--- a/bestsite/loginsys/templates/loginsys/login.html
+++ b/bestsite/loginsys/templates/loginsys/login.html
@@ -1,4 +1,4 @@
-{% extend 'base.html' %}
+{% extends 'base.html' %}
 
 {% block login %}
     <div class="large-offset-3 large-6 columns">
@@ -12,6 +12,7 @@
                 <label class="error">{{ login_error }}</label>
             {% endif %}
             <input class="button" type="submit" value="Войти">
+            <div class="label round secondary"><a href="/auth/register/">Регистрация</a></div>
         </form>
     </div>
 {% endblock %}
