--- a/bestsite/loginsys/templates/loginsys/register.html
+++ b/bestsite/loginsys/templates/loginsys/register.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+
+{% extends 'base.html' %}
+
+
+{% block login %}
+    <div class="large-offset-3 large-6 columns">
+        <form action="/auth/register/" method="post">
+            {% csrf_token %}
+            {{ form }}
+
+            <input class="button" type="submit" value="Зарегистрироваться">
+        </form>
+    </div>
+{% endblock %}
