--- a/bestsite/templates/base.html
+++ b/bestsite/templates/base.html
@@ -4,7 +4,10 @@
 
     <head>
         <title>Информация о рабах</title>
-       <link href="{% static 'workers/css/main.css' %}" rel="stylesheet" type='text/css'>
+
+        <link rel="shortcut icon" href="{% static  'workers/image/favicon.ico' %}" type="image/x-icon">
+        <link rel="icon" href="{% static  'workers/image/favicon.ico' %}" type="image/x-icon">
+        <link href="{% static 'workers/css/main.css' %}" rel="stylesheet" type='text/css'>
         <link href="{% static 'workers/css/foundation.css' %}" rel="stylesheet" type='text/css'>
         <link href="{% static 'workers/css/foundation.min.css' %}" rel="stylesheet" type='text/css'>
 
